[metadata]
name = cytocoarsening
version = 0.0.8
author = ChiJaneChen
author_email = cookie877128@gmail.com
description = cytocoarsening-graph coarsening
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catchzeng/cytocoarsening
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    scikit-learn>=0.24.1
    numpy>=1.20.1
    networkx>=2.6.2